[package]
name = "seer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.2"
futures-util = "0.3.31"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
